--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+/config/key.json
+/config/firebase.json
+/.idea/jsLibraryMappings.xml
