--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "firebase-admin": "^10.0.2",
     "googleapis": "^95.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.3",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
